--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> Digtal clock</title>
+    <title> Digtal clock using js</title>
 </head>
 <body>
     <h1> Digital Clock</h1>
     <nav></nav>
+
      
 </body>
 </html>
